# soksak

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
ai-server/: .env.example  pyproject.toml
ai-server/app/: main.py
ai-server/app/api/: chat.py
ai-server/app/chains/: chat.py
ai-server/app/core/: config.py
ai-server/app/llm/: __init__.py  factory.py  profiles.py  utils.py
ai-server/app/memory/: __init__.py  summarizer.py
ai-server/app/prompts/: builder.py  config.py  sections.py
ai-server/docs/: prompt-architecture.md
ai-server/tests/: test_prompts.py
backend/: build.gradle  settings.gradle
backend/src/main/java/com/soksak/soksak/: SoksakApplication.java
backend/src/main/resources/: application.properties  application.yml
backend/src/main/resources/static/: index.html
backend/src/test/java/com/soksak/soksak/: SoksakApplicationTests.java
backend/src/test/resources/: application.yml
design-mockups/: chat-prestige-purple.html  chat-reel-theory.html  home-prestige-purple.html  home-reel-theory.html  index.html
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/.design/: DESIGN.md
frontend/src/: App.jsx  Sidebar.jsx  api.js  auth.jsx  confirm.jsx  constants.js  genres.js  main.jsx  models.js  styles.css
frontend/src/components/: CharacterFields.jsx  CharacterForm.jsx  LorebookPanel.jsx  ModelPicker.jsx
frontend/src/pages/: CharacterEditPage.jsx  CharactersPage.jsx  ChatPage.jsx  LoginPage.jsx  MyCharactersPage.jsx  NewCharacterPage.jsx  PersonasPage.jsx  SignupPage.jsx
(+101 files in other folders)
