[project]
name = "soksak-llm-service"
version = "0.1.0"
description = "Soksak LLM service (FastAPI + LangChain). Stateless gateway for Java backend."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "langchain>=0.3",
    "langchain-openai>=0.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
